--- a/mani-project1/style/main.css
+++ b/mani-project1/style/main.css
@@ -10,6 +10,8 @@ body {
   display: grid;
   grid-template-columns: auto;
   row-gap: 30px;
+  padding: 0;
+  margin: 0;
 }
 
 .head {
@@ -45,6 +47,9 @@ body {
 .nav ul li {
   display: inline-block;
 }
+.nav li a.first2:link {
+  font-size: 25px;
+}
 .nav li a:link,
 .nav li a:visited {
   text-decoration: none;
@@ -54,8 +59,29 @@ body {
   font-weight: bold;
   font-size: 20px;
 }
+.nav li a:hover {
+  color: black;
+}
 .nav li:not(:last-child) {
   margin-right: 15px;
+}
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: wheat;
+  color: black;
+  text-align: center;
+  border-radius: 8px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+}
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
 .main {
   display: grid;
@@ -94,6 +120,9 @@ main .item2 {
   -moz-box-shadow: -1px 1px 5px 9px rgba(86, 190, 86, 0.75);
   box-shadow: -1px 1px 5px 9px rgba(86, 190, 86, 0.75);
 }
+.main .item2 p {
+  line-height: 25px;
+}
 .hidden {
   text-align: center;
   display: none;
@@ -107,4 +136,42 @@ main .item2 {
   width: 60%;
   margin-left: auto;
   margin-right: auto;
+}
+.ad {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  background-color: #e89e7b;
+  -webkit-box-shadow: -1px 1px 5px 9px rgba(114, 198, 247, 0.75);
+  -moz-box-shadow: -1px 1px 5px 9px rgba();
+  box-shadow: -1px 1px 5px 9px rgba();
+}
+.maincover {
+  display: grid;
+  grid-template-columns: 80% 20%;
+}
+.son2 {
+  text-align: center;
+  border-left: 2px solid darkgreen;
+}
+.maincover .son2 img {
+  border-radius: 100px;
+  -webkit-box-shadow: -1px 1px 5px 9px rgba(86, 190, 86, 0.75);
+  -moz-box-shadow: -1px 1px 5px 9px rgba(86, 190, 86, 0.75);
+  box-shadow: -1px 1px 5px 9px rgba(86, 190, 86, 0.75);
+  animation-name: spin;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+.son2 ul li {
+  margin-bottom: 20px;
 }
