--- a/mani-project1/style/main.css
+++ b/mani-project1/style/main.css
@@ -13,14 +13,32 @@ body {
   padding: 0;
   margin: 0;
 }
+.topnav {
+  background-color:#8ac4df;
+  overflow: hidden;
+  
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 30px;
+  display: none;
+}
 
 .head {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto;
   align-items: center;
   text-align: center;
   background-color: #8ac4df;
   height: 200px;
+  max-width:100%
 }
 .head img {
   border-radius: 100px;
@@ -72,7 +90,7 @@ body {
 .tooltip .tooltiptext {
   visibility: hidden;
   width: 120px;
-  background-color: wheat;
+  background-color: white;
   color: black;
   text-align: center;
   border-radius: 8px;
@@ -159,7 +177,9 @@ main .item2 {
   border-left: 2px solid darkgreen;
 }
 
+.son2 .world{
 
+}
 
 .son2 ul li {
   margin-bottom: 20px;
@@ -210,13 +230,63 @@ form p label{
 }
 fieldset{
   border: 1px dotted #61b5cf;
-  margin-top: 16px;
+  margin-top: 30px;
   padding: 40px;
   width: 80%;
   background-color: white;
-  z-index: 1;
+  
+   
   
 }
 legend{
   font:bold 0.8em Arial , helvetica , sans-serif;
+}
+#time {
+  border:1px solid black;
+   padding: 15px; border-radius: 150px;
+    width:70px;
+     height: 70px;
+          
+}
+@media  screen and (max-width : 500px) {
+
+  .ad {
+    display: none;
+  }
+  .head{
+    grid-template-columns: auto ;
+    align-items: flex-start;
+    text-align: left;
+    margin-bottom: 130px;
+    
+  }
+  .head1 img{margin-left:50px;}
+  .main{
+    grid-template-columns: auto;
+    row-gap: 30px;
+  }
+  .container{
+    row-gap: 15px;
+  }
+
+.nav{
+display:none;
+}
+.maincover{
+  grid-template-columns: auto;
+}
+.topnav {position: absolute;top: 0;right: 0;}
+  .topnav a{
+display: block;
+  
+}
+.nav ul{background-color: #8ac4df;overflow: hidden;}
+.nav ul li {
+  display: block;
+  text-align: center;
+  
+}
+.nav ul li:not(:last-child) {
+  border-bottom: 1px dotted darkblue;
+}
 }
