--- a/mani-project1/style/main.css
+++ b/mani-project1/style/main.css
@@ -101,6 +101,7 @@ body {
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
+.maincover{margin-top: 50px;}
 .main {
   display: grid;
   grid-template-columns: auto auto;
@@ -257,13 +258,13 @@ legend{
     grid-template-columns: auto ;
     align-items: flex-start;
     text-align: left;
-    margin-bottom: 130px;
+    margin-bottom: 80px;
     
   }
   .head1 img{margin-left:50px;}
   .main{
     grid-template-columns: auto;
-    row-gap: 30px;
+    row-gap: 50px;
   }
   .container{
     row-gap: 15px;
@@ -286,6 +287,7 @@ display: block;
   text-align: center;
   
 }
+
 .nav ul li:not(:last-child) {
   border-bottom: 1px dotted darkblue;
 }
