--- a/mani-project1/style/main.css
+++ b/mani-project1/style/main.css
@@ -2,85 +2,56 @@
   box-sizing: border-box;
 }
 body {
+  background-color: #cbffb7;
   margin: 0;
   padding: 0;
-  background-color: #cbffb7;
 }
 .container {
   display: grid;
   grid-template-columns: auto;
-  row-gap: 0;
-  padding: 0;
-  margin: 0;
-}
-.topnav {
-  background-color:#8ac4df;
-  overflow: hidden;
-  
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 30px;
-  display: none;
+  column-gap: 20px;
+  row-gap: 30px;
 }
 
 .head {
   display: grid;
   grid-template-columns: auto auto auto;
-  align-items: center;
-  text-align: center;
-  background-color: #8ac4df;
-  height: 200px;
-  max-width:100%
+  padding: 20px;
+
+  background-image: url("./images/farm1.jpg");
+  background-size: cover;
 }
-.head img {
-  border-radius: 100px;
-  animation-name: bird;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-}
-@keyframes bird {
-  0% {
-    transform: rotateZ(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
+
 .head h1 {
-  color: rgb(86, 190, 86);
+  color: darkgreen;
 }
-.nav ul {
+
+.headnav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.nav ul li {
+.headnav ul li {
   display: inline-block;
 }
-.nav li a.first2:link {
+.headnav li a.first2:link {
   font-size: 25px;
 }
-.nav li a:link,
-.nav li a:visited {
+.headnav li a:link,
+.headnav li a:visited {
   text-decoration: none;
   color: black;
   display: block;
-  color: darkgreen;
+
   font-weight: bold;
   font-size: 20px;
 }
-.nav li a:hover {
+
+.headnav li a:hover {
   color: black;
+  font-size: 23px;
 }
-.nav li:not(:last-child) {
+.headnav li:not(:last-child) {
   margin-right: 15px;
 }
 .tooltip {
@@ -101,15 +72,33 @@ body {
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
-.maincover{margin-top: 50px;}
+
+.ad {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  align-items: center;
+  text-align: center;
+  padding: 5px;
+  background-color: white;
+
+  animation-name: adbar;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  margin-bottom: 30px;
+}
+
 .main {
   display: grid;
-  grid-template-columns: auto auto;
-  text-align: center;
-  padding: 20px;
+  grid-template-columns: 60% 40%;
+}
+.maincover {
+  display: grid;
+  grid-template-columns: 80% 20%;
+  margin-bottom: 40px;
 }
 .main section {
-  width: 90%;
+  width: 80%;
   height: 500px;
   border: 2px solid rgb(114, 198, 247);
   padding: 30px;
@@ -120,66 +109,45 @@ body {
   box-shadow: -1px 1px 5px 9px rgba(86, 190, 86, 0.75);
 }
 
-.item1 .rmore {
+.main .rmore {
   text-align: right;
 }
 
-.item1 a:link,
-.item1 a:visited {
+.main a:link,
+.main a:visited {
   text-decoration: none;
   color: darkgreen;
 }
 
-main .item2 {
-  max-width: 60%;
-}
-.main .item2 img {
+.main img {
   border-radius: 150px;
   -webkit-box-shadow: -1px 1px 5px 9px rgba(86, 190, 86, 0.75);
   -moz-box-shadow: -1px 1px 5px 9px rgba(86, 190, 86, 0.75);
   box-shadow: -1px 1px 5px 9px rgba(86, 190, 86, 0.75);
 }
-.main .item2 p {
-  line-height: 25px;
-}
-.hidden {
+
+#hidden {
   text-align: center;
   display: none;
   width: 60%;
   margin-left: auto;
   margin-right: auto;
 }
-.invisible {
+#invisible {
   text-align: center;
   display: none;
   width: 60%;
   margin-left: auto;
   margin-right: auto;
 }
-.ad {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  align-items: center;
-  text-align: center;
-  padding: 5px;
-  background-color: #e89e7b;
-  -webkit-box-shadow: -1px 1px 5px 9px rgba(114, 198, 247, 0.75);
-  -moz-box-shadow: -1px 1px 5px 9px rgba();
-  box-shadow: -1px 1px 5px 9px rgba();
-}
-.maincover {
-  display: grid;
-  grid-template-columns: 80% 20%;
-  row-gap: 50px;
-}
+
 .son2 {
   text-align: center;
   border-left: 2px solid darkgreen;
+  padding: 10px;
 }
 
-.son2 .world{
-
+.son2 .world {
 }
 
 .son2 ul li {
@@ -200,95 +168,132 @@ ul li {
   text-decoration: none;
   color: black;
 }
-h1{
-  font 1.2em Arial,helvetica , sans-serif;
+.mySlides {
+  display: none;
 }
-form{
-  padding: 40px;
-  
+img {
+  vertical-align: middle;
 }
-.signup input.text{
-  color: #00008b;
-  background-color: #e3f2f7;
-  border: 1px inset #00008b;
-  width: 200px;
-}
-form input.button {
-  color: #00008b;
-  background-color: #add8e6;
-  border: 1px outset #00008b;
-}
-form p {
-  clear: left;
-  margin: 0;
-  padding: 0;
-  padding-top: 5px;
-}
-form p label{
-  float: left;
-  width: 30%;
-  font: bold 0.9em Arial, helvetica , sans-serif;
-}
-fieldset{
-  border: 1px dotted #61b5cf;
-  margin-top: 30px;
-  padding: 40px;
-  width: 80%;
-  background-color: white;
-  
-   
-  
-}
-legend{
-  font:bold 0.8em Arial , helvetica , sans-serif;
-}
-#time {
-  border:1px solid black;
-   padding: 15px; border-radius: 150px;
-    width:70px;
-     height: 70px;
-          
-}
-@media  screen and (max-width : 500px) {
 
+/* Slideshow container */
+.slideshow-container {
+  max-width: 100%;
+  position: relative;
+  margin: auto;
+  margin: 60px;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {
+    font-size: 11px;
+  }
+}
+
+@media screen and (max-width: 500px) {
   .ad {
     display: none;
   }
-  .head{
-    grid-template-columns: auto ;
+  .head {
+    grid-template-columns: auto;
     align-items: flex-start;
     text-align: left;
     margin-bottom: 80px;
-    
+    height: 400px;
   }
-  .head1 img{margin-left:50px;}
-  .main{
-    grid-template-columns: auto;
+  .head1 img {
+    margin-left: 50px;
+  }
+  .main {
+    grid-template-columns: 100%;
     row-gap: 50px;
   }
-  .container{
+  .container {
     row-gap: 15px;
   }
 
-.nav{
-display:none;
-}
-.maincover{
-  grid-template-columns: auto;
-}
-.topnav {position: absolute;top: 0;right: 0;}
-  .topnav a{
-display: block;
-  
-}
-.nav ul{background-color: #8ac4df;overflow: hidden;}
-.nav ul li {
-  display: block;
-  text-align: center;
-  
-}
+  .nav {
+    display: none;
+    position: static;
+  }
+  .maincover {
+    grid-template-columns: auto;
+  }
+  .topnav {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  .topnav a {
+    display: block;
+  }
+  .nav ul {
+    background-color: transparent;
+    overflow: hidden;
+  }
+  .nav ul li {
+    display: block;
+    text-align: center;
+  }
+  .nav ul a:link,
+  .nav ul a:visited {
+    color: white;
+  }
 
-.nav ul li:not(:last-child) {
-  border-bottom: 1px dotted darkblue;
-}
+  .nav ul li:not(:last-child) {
+    border-bottom: 1px dotted white;
+  }
+  .head {
+    height: 350px;
+  }
 }
