--- a/mani-project1/style/main.css
+++ b/mani-project1/style/main.css
@@ -90,14 +90,19 @@ body {
 
 .ad {
   width: 100%;
+  height: 80px;
   display: grid;
+
   grid-template-columns: 25% 25% 25% 25%;
   align-items: center;
   text-align: right;
   padding: 5px;
-  background-color: white;
+  background-color: orange;
+  border: 2px solid black;
   background-size: cover;
-
+  position: sticky;
+  top: 0;
+  z-index: 1;
   animation-name: adbar;
   animation-duration: 2s;
   animation-iteration-count: infinite;
@@ -105,7 +110,6 @@ body {
   column-gap: 30px;
 }
 .col img {
-  width: 35%;
   float: left;
   text-align: center;
   padding: 15px;
