--- a/mani-project1/style/main.css
+++ b/mani-project1/style/main.css
@@ -11,6 +11,8 @@ body {
   grid-template-columns: auto;
   column-gap: 20px;
   row-gap: 30px;
+  margin: 0;
+  padding: 0;
 }
 
 .head {
@@ -20,6 +22,8 @@ body {
   justify-content: space-between;
   background-image: url("../images/farm1.jpg");
   background-size: cover;
+  margin: 0;
+  padding: 0;
 }
 
 .head h1 {
